name:                secp256k1
version:             0.5.2
synopsis:            Bindings for secp256k1 library from Bitcoin Core
description:         Please see README.md
homepage:            http://github.com/haskoin/secp256k1-haskell#readme
license:             PublicDomain
license-file:        UNLICENSE
author:              Jean-Pierre Rupp
maintainer:          xenog@protonmail.com
copyright:           (c) 2017 Jean-Pierre Rupp
category:            Crypto
build-type:          Custom
extra-source-files:
    README.md
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    exposed-modules:     Crypto.Secp256k1
                       , Crypto.Secp256k1.Internal
    build-depends:       base >= 4.8 && < 5
                       , base16-bytestring
                       , bytestring
                       , cereal
                       , entropy
                       , mtl
                       , QuickCheck
                       , string-conversions
    default-language:    Haskell2010
    ghc-options:         -Wall
    cc-options:          -DHAVE_CONFIG_H

test-suite secp256k1-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    other-modules:       Crypto.Secp256k1.Tests
                       , Crypto.Secp256k1.Internal.Tests
    build-depends:       base
                       , base16-bytestring
                       , bytestring
                       , cereal
                       , cryptohash
                       , entropy
                       , HUnit
                       , mtl
                       , QuickCheck
                       , secp256k1
                       , string-conversions
                       , test-framework
                       , test-framework-hunit
                       , test-framework-quickcheck2
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

source-repository head
    type:     git
    location: https://github.com/haskoin/secp256k1-haskell.git
